- New: task #11261 : Add an entry into menu called "New shipment".
- New: Make option MAIN_GENERATE_DOCUMENTS_WITHOUT_VAT available by default.
- New: Can build PDF in USLetter format or canada format.
- New: Can export into Excel 2007 format.
- New: Add hidden option CASHDESK_FORCE_STOCK_ON_BILL
- New: Can search on part of barcode into POS module.

For developers:
- New: Add webservice to get or create a prodcut or service.
- New: Log module outputs can be setup with "or" rule (not only "xor").
- New: Add FirePHP output for logging module.
- Qual: Data structure for supplier prices is simpler.
- Qual: Removed no more used external libraries.
- Qual: Cleaned a lot of dead code.
- Qual: Add more "hooks".
- Qual: Add "canvas" feature to overwrite page of thirdparty, contact, product with yours.
- Qual: More OOP (usage of "abstract", "static", ...), uniformize constructors.


***** ChangeLog for 3.1 compared to 3.0 *****
WARNING: IE6 browser is no more supported in this version.
For users:
- New: War against number of clicks:
     - When adding a free bank transaction, form to add next one is still
       visible (save one click).
     - task #10969 : Add checkbox to close automatically invoice if
       payment is complete (save 3 clicks).
     - Reduce a step into supplier order workflow to save time. If user
       has permission to approve, order is approved when order is validated.
       (Save 2 clicks).
     - In commercial main menu, left menu are already opened. This save one click
       to open a proposal or order.
     - Can add a discount for third party, during invoice edition (and we 
       saved clicks again).
     - When creating a contract, sales representative are preset to user. This save
       4 clicks.
     - Can edit several fields in bank transaction line page into one update.
     - Creation of contacts from third party page go back to third party.
     - Preselect model if there is only one. This save 2 clicks. 